# Goonio

./: .env-sample  Dockerfile  README.md  gunicorn_config.py  pyproject.toml  render.yaml
goonio/: main.py
goonio/api/: router.py
goonio/core/: config.py  logger.py  stream_handler.py
goonio/scrapers/: manager.py  sxyprn.py
